packages/css/src/index.scss
/*@import 'normalize.css';*/

/*@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");*/

@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

@import "./components/loader.scss";

@import "./components/body.scss";
@import "./components/navbar.scss";
@import "./components/card.scss";
@import "./components/buttons.scss";
@import "./components/radiobtn.scss";
@import "./components/selectdropdown.scss";
@import "./components/textfields.scss";
@import "./components/bannercomponents.scss";
@import "./components/datewrap.scss";
@import "./components/datatable.scss";
@import "./components/checkpoint.scss";
@import "./components/checkbox.scss";
@import "./components/inputotp.scss";
@import "./components/map.scss";
@import "./components/menu.scss";
@import "./components/submiterrors.scss";
@import "./components/ratingstar.scss";
@import "./components/keynote.scss";
@import "./components/statushighlight.scss";
@import "./components/imageviewer.scss";
@import "./components/actionbar.scss";
@import "./components/table.scss";
@import "./components/popup.scss";
@import "./components/uploadcomponents.scss";
@import "./components/toast.scss";
@import "./components/detailscontainer.scss";
@import "./components/telephone.scss";
@import "./components/grey.scss";
@import "./components/actionLink.scss";
@import "./components/sectionalDropdown.scss";
@import "./components/detailscard.scss";
@import "./components/searchAction.scss";
@import "./components/tag.scss";
@import "./components/topbar.scss";
@import "./components/languageSelector.scss";
@import "./components/custombtn.scss";
@import "./components/citizenInfoLabel.scss";
@import "./components/roundedLabel.scss";
@import "./components/changeLanguage.scss";

@import "./pages/employee/index.scss";
@import "./pages/employee/popupmodule.scss";
@import "./pages/employee/container.scss";
@import "./pages/employee/inbox.scss";
@import "./pages/employee/response.scss";

@import "./pages/citizen/payment/payment-type.scss";

.dark {
  @apply text-text-primary;
}

.home-link {
  margin-left: 16px;
  margin-bottom: 16px;

  a {
    color: #1d70b8;
  }
}

.clear-search-label {
  color: #f47738;
  cursor: pointer;
}

.search-submit-bar {
  margin-top: 32;
  margin-left: auto;
}

.application-details-link-button {
  @apply flex justify-between items-center;

  .download-button {
    color: #f47738;
    margin-left: 8px;
  }
}

.response-download-button {
  @apply flex mb-sm;

  .download-button {
    color: #f47738;
    margin-left: 8px;
  }
}

.check-page-link-button {
  color: #f47738 !important;
}

.application-table-container {
  @apply mt-lg ml-lg flex-1;
}

.primary-label-btn {
  @apply flex;
  gap: 10px;

  svg {
    fill: #f47738;
  }

  color: #f47738;
  &:hover {
    color: #000;

    svg {
      fill: #000;
    }
  }

  cursor: pointer;
  font-weight: 500;
  width: fit-content;
}

.disabled {
  @apply border-grey-dark text-grey-dark !important;
  pointer-events: none !important;
}

.card-date-input {
  @apply absolute top-0 left-0 w-3/4 bg-white pl-sm border border-input-border border-solid border-r-0;
  outline: transparent solid 1px;
  height: 2.5rem;
}

.h4 {
  @apply mb-sm;
}

.react-time-picker {
  width: 194px;
  height: 2.5rem;
  &__wrapper {
    border: 2px solid #0b0c0c;
    padding-left: 16px;
  }
  &__inputGroup__input {
    @apply px-sm;
    line-height: 2.5rem;
    min-width: 16px;
    &:focus {
      outline: 2px solid black;
    }
  }
}

.border-none {
  border: none;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}
/*TODO: multiple device enhacements*/
.bill-details {
  height: calc(100vh - 186px);

  &-summary {
    height: 30vh;
    overflow: scroll;
  }
}

@media (max-width: 375px) {
  height: calc(100vh - 156px);
}

@media (max-width: 360px) {
  .bill-details {
    &-summary {
      height: 20vh;
      overflow: scroll;
    }
  }
}

@media (max-width: 320px) {
  .bill-details {
    height: 100%;
    &-summary {
      height: 100%;
    }
  }
}

@screen dt {
  .bill-details {
    height: 100%;

    &-summary {
      height: 100%;
      overflow: auto;
    }
  }
}

.my-bills {
  @apply flex flex-col;
  min-height: 85vh;
}

.bill-summary {
  border: #e8e7e6 solid 1px;
  width: 99%;
  @apply bg-grey-light m-auto mb-md;

  .bill-account-details {
    @apply flex mb-md;
    padding: 5px;

    .label {
      @apply w-1/2 font-bold;
    }

    .value {
      @apply w-1/2 text-right;
    }
  }

  .amount-details {
    @apply flex mb-md items-center;
    padding: 5px;

    .label {
      @apply w-1/2 font-bold;
    }

    .value {
      @apply w-1/2 font-bold;
      font-size: 18px;
      text-align: dropRight;
    }
  }
}

.bill-payment-amount {
  @apply sticky bottom-0 bg-white;
  padding-bottom: 32px;

  .payment-amount-front {
    @apply absolute z-10 w-10 flex justify-center items-center;
    background-color: #efefef;
    padding: 7px 12px;
    color: #9a9a9a;
  }
}

.text-indent-xl input {
  text-indent: 40px;
}

.select-payment-type {
  @apply flex justify-center font-bold items-center;
  padding-top: 10px;
  padding-bottom: 25px;

  .value {
    font-size: 20px;
  }
}

.cheque-date {
  @apply flex items-center mb-lg;
  border: 2px solid #0b0c0c;
  border-radius: 2px;

  input {
    @apply outline-none w-full;
    border: 0px;
    background: transparent;
    text-indent: 5px;
    padding: 6px 0px;
  }

  button {
    @apply outline-none;
    border: 0px;
    background: transparent;
    text-indent: 2px;
  }
}

.w-half {
  @apply w-1/2;
}

.ifsc-field {
  @apply flex items-center mb-lg;
  border: 2px solid #0b0c0c;
  border-radius: 2px;

  input {
    @apply outline-none w-full;
    border: 0px;
    background: transparent;
    text-indent: 5px;
    padding: 6px 0px;
  }
  button {
    @apply outline-none;
    border: 0px;
    background: transparent;
    text-indent: 2px;
  }
}

.text-input {
  @apply relative w-full;
}

.custom-time-picker {
  @apply w-full;
  max-width: 200px;
}

.sla-cell {
  @apply text-text-secondary;
}

.submit-bar-search {
  margin-top: 32px;
  margin-left: 96px;
  max-width: 256px;
}

.clear-search-container {
  @apply flex justify-between items-center;
}

.card-label-smaller {
  @apply w-1/3;
  margin-bottom: revert;
}

.underline {
  border-color: #e7e6e6;
  width: 90%;
  margin: 8px auto;
}

.box-shadow-none {
  box-shadow: none;
}

.component-in-front {
  @apply flex justify-center items-center;
}

.subform-composer {
  @apply flex;
}

.inbox-search-container {
  .result {
    @apply mt-lg;
  }
}

